--- a/sources/VeloCity.Installer/EnvironmentComponents.wxs
+++ b/sources/VeloCity.Installer/EnvironmentComponents.wxs
@@ -19,30 +19,21 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-    <Product
-        Id="*"
-        Name="Velo City"
-        Language="1033"
-        Version="1.0.0.0"
-        Manufacturer="Dust in the Wind"
-        UpgradeCode="ecb19ba8-d443-4ac2-ae3e-46e9e6bab11b">
+    <Fragment>
 
-        <Package
-            InstallerVersion="200"
-            Compressed="yes"
-            InstallScope="perMachine" />
+        <ComponentGroup Id="UpdateEnvironment" Directory="INSTALLFOLDER">
+            <Component Id ="UpdateEnvironment" Guid="7221BA39-4147-4916-8ED3-CCDD8503D6EE">
+                <CreateFolder />
+                <Environment
+                    Id="SetPath"
+                    Name="PATH"
+                    Value="[INSTALLFOLDER]"
+                    Permanent="no"
+                    Part="last"
+                    Action="set"
+                    System="yes" />
+            </Component>
+        </ComponentGroup>
 
-        <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-        <MediaTemplate />
-
-        <Feature
-            Id="ProductFeature"
-            Title="Velo City"
-            Level="1">
-
-            <ComponentGroupRef Id="VeloCityFiles" />
-            <ComponentGroupRef Id="UpdateEnvironment" />
-        </Feature>
-    </Product>
-
+    </Fragment>
 </Wix>
