--- a/sources/VeloCity.Installer/DatabaseJsonDlg.wxs
+++ b/sources/VeloCity.Installer/DatabaseJsonDlg.wxs
@@ -36,13 +36,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 -->
 
                 <Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes">
-                    <Text>{\WixUI_Font_Title}Customer Information</Text>
+                    <Text>{\WixUI_Font_Title}Database</Text>
                 </Control>
 
                 <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="WixUI_Bmp_Banner" />
 
                 <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes">
-                    <Text>Please enter your customer information</Text>
+                    <Text>Please provide the location of the json database file.</Text>
                 </Control>
 
                 <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
@@ -56,28 +56,28 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <Control
                     Id="DatabaseFileLabel"
                     Type="Text"
-                    X="45"
-                    Y="73"
-                    Width="100"
+                    X="20"
+                    Y="60"
+                    Width="120"
                     Height="15"
-                    TabSkip="no"
-                    Text="&amp;Database JSON File:" />
+                    Text="&amp;JSON Database File:" />
 
                 <Control
                     Id="DatabaseFileEdit"
                     Type="Edit"
-                    X="45"
-                    Y="85"
-                    Width="250"
+                    X="20"
+                    Y="100"
+                    Width="270"
                     Height="18" 
-                    Property="DATABASE_JSON_LOCATION" />
+                    Property="DATABASE_JSON_LOCATION"
+                    Text="{80}"/>
 
                 <Control
                     Id="BrowseButton"
                     Type="PushButton" 
                     X="300"
-                    Y="85"
-                    Width="25"
+                    Y="100"
+                    Width="40"
                     Height="18" 
                     Text="..."/>
 
