added change log and readme files. compile custom action dlls on 32bit.

--- a/sources/VeloCity.Installer/Components/EnvironmentComponents.wxs
+++ b/sources/VeloCity.Installer/Components/EnvironmentComponents.wxs
@@ -21,8 +21,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
 
-        <ComponentGroup Id="UpdateEnvironment" Directory="INSTALLFOLDER">
-            <Component Id ="UpdateEnvironment" Guid="7221BA39-4147-4916-8ED3-CCDD8503D6EE">
+        <ComponentGroup Id="EnvironmentComponentGroup" Directory="INSTALLFOLDER">
+            <Component Id ="EnvironmentComponent" Guid="7221BA39-4147-4916-8ED3-CCDD8503D6EE">
                 <CreateFolder />
                 <Environment
                     Id="SetPath"
