--- a/sources/VeloCity.Installer/Product.wxs
+++ b/sources/VeloCity.Installer/Product.wxs
@@ -24,7 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         Id="*"
         Name="Velo City"
         Language="1033"
-        Version="1.0.0.0"
+        Version="1.1.0.0"
         Manufacturer="Dust in the Wind"
         UpgradeCode="ecb19ba8-d443-4ac2-ae3e-46e9e6bab11b">
 
@@ -53,10 +53,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <WixVariable Id="WixUILicenseRtf" Value="license.rtf" />
         <UIRef Id="WixUI_InstallDir_Modified" />
 
+        <InstallUISequence>
+            <Custom Action="ReadFromConfigFile" After="CostFinalize">WIX_UPGRADE_DETECTED</Custom>
+        </InstallUISequence>
+
         <InstallExecuteSequence>
             <!-- install, upgrade(install), downgrade -->
             <Custom Action="UpdateConfigFile_SetData" Before="UpdateConfigFile">NOT Installed</Custom>
             <Custom Action="UpdateConfigFile" After="InstallFiles">NOT Installed</Custom>
+
+            <!-- update(install) -->
+            <Custom Action="ReadFromConfigFile" After="CostFinalize">WIX_UPGRADE_DETECTED</Custom>
         </InstallExecuteSequence>
 
     </Product>
