--- a/sources/VeloCity.Wpf.Presentation/Views/SprintOverviewView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Views/SprintOverviewView.xaml
@@ -17,7 +17,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <UserControl
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Views.SprintDetailsView"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.Views.SprintOverviewView"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -28,7 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance viewModels:SprintDetailsViewModel}">
+    d:DataContext="{d:DesignInstance viewModels:SprintOverviewViewModel}">
 
     <ScrollViewer>
         <Grid>
